# ChatGPT-clone

Frontend/: README.md  index.html  vite.config.ts
Frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
Frontend/app/chat/: page.tsx
Frontend/app/login/: page.tsx
Frontend/components/: ProtectedRoute.tsx  ThemeToggle.tsx
Frontend/components/chat/: ChatInput.tsx  ChatMessage.tsx  ChatSidebar.tsx  TypingIndicator.tsx
Frontend/contexts/: AuthContext.tsx  ThemeContext.tsx
Frontend/hooks/: useChat.ts
Frontend/lib/: firebase.ts
Frontend/src/: App.tsx  index.css
Frontend/src/components/: ChatInput.tsx  ChatMessage.tsx  ChatSidebar.tsx  TypingIndicator.tsx
Frontend/src/config/: firebase.ts
Frontend/src/contexts/: AuthContext.tsx
Frontend/src/pages/: Auth.tsx  ChatInterface.tsx  Landing.tsx
Frontend/src/services/: api.ts
Frontend/src/types/: chat.ts
backend/: .env  .gitignore  auth_middleware.py  database.py  firebase_config.py  main.py  models.py  pyproject.toml
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.jsx  page.jsx
frontend/components/: chat-area.jsx  chat-sidebar.jsx  message-bubble.jsx  streaming-message.jsx
frontend/src/: main.tsx
frontend/src/Auth/: firebaseConfig.js
frontend/src/api/: chatApi.ts
frontend/src/components/: ChatArea.tsx  ChatInput.tsx  ChatSidebar.tsx  Login.tsx  MessageBubble.tsx  SignUp.tsx
frontend/src/contexts/: AuthContext.tsx  ThemeContext.tsx
frontend/src/pages/: Index.tsx
