[project]
name = "chatbot"
version = "0.1.0"
description = "ChatGPT Clone Backend with Firebase and Groq"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "groq>=0.26.0",
    "uvicorn>=0.34.2",
    "firebase-admin>=6.4.0",
    "pydantic>=2.5.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Include all Python files in the current directory
include = [
    "*.py",
    "credentials/*.json",
]

[tool.hatch.build.targets.wheel.sources]
# Tell hatchling where to find the source files
"." = ""

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]